--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,13 +56,33 @@ services:
     networks:
       - todolist-network
 
+  # -------- METRICS --------
   jaeger:
     container_name: jaeger
     image: jaegertracing/all-in-one:latest
+    environment:
+      - METRICS_STORAGE_TYPE=prometheus
+      - PROMETHEUS_SERVER_URL=http://prometheus:9090
     restart: always
     ports:
-      - "16686:16686"
       - "14250:14250"
+      - "14268:14268"
+      - "6831:6831/udp"
+      - "16686:16686"
+      - "16685:16685"
+    networks:
+      - todolist-network
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - "9090:9090"
+    restart: unless-stopped
+    volumes:
+      - ./metrics/prometheus:/etc/prometheus
+      - prom_data:/prometheus
     networks:
       - todolist-network
 
@@ -74,3 +94,5 @@ networks:
 volumes:
   db-data:
     name: volume-database
+  prom_data:
+    name: prometheus
