Add comprehensive architecture, deployment guide, and screenshot documentation
- Created ARCHITECTURE.md detailing the system architecture, technology stack, design patterns, component interactions, database schema, API design, security considerations, scalability, performance optimizations, observability, development workflow, configuration management, and future enhancements.
- Added DEPLOYMENT_GUIDE.md with instructions for prerequisites, environment configuration, local development, Docker deployment, cloud platform deployment (AWS, Azure, GCP, DigitalOcean), production checklist, monitoring & maintenance, and troubleshooting.
- Introduced README.md in screenshots directory outlining guidelines for capturing, naming, and optimizing screenshots, along with a checklist for completeness and a demo GIF creation script.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -113,6 +113,17 @@
 			<version>1.12.0</version>
 		</dependency>
 
+		<!-- Micrometer Tracing with Jaeger (Spring Boot 3 native) -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-otel</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-exporter-otlp</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
