--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=securepassword
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 
+# Spring Boot Actuator
 management.endpoints.web.exposure.include=health,info,prometheus,metrics
 management.endpoint.health.show-details=always
 management.metrics.export.prometheus.enabled=true
@@ -14,3 +15,8 @@ management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 management.metrics.tags.application=todo-list
 prometheus.query.support-spanmetrics-connector=true
+
+# OpenTelemetry Tracing Configuration (Spring Boot 3 native)
+management.tracing.sampling.probability=1.0
+management.otlp.tracing.endpoint=http://jaeger:4318/v1/traces
+spring.application.name=${JAEGER_SERVICE_NAME:todo-list-backend}
