Update author information across documentation and workflows

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,14 +4,11 @@ on:
   pull_request:
     types: [closed]
     branches: [main]
-  push:
-    branches:
-      - main
-    tags:
-      - "v*.*.*"
 
 jobs:
   publish:
+    # Only run if PR was merged and came from dev branch
+    if: github.event.pull_request.merged == true && github.event.pull_request.head.ref == 'dev'
     runs-on: ubuntu-latest
     env:
       BASE_SEMANTIC_VERSION: ""
